[JENKINS-73695] reduce table width to prevent horizontal scrollbar in FF

--- a/war/src/main/scss/components/_table.scss
+++ b/war/src/main/scss/components/_table.scss
@@ -4,7 +4,7 @@
   --table-padding: 0.55rem;
 
   position: relative;
-  width: 100%;
+  width: 99%;
   background: var(--table-background);
   border-radius: calc(var(--table-border-radius) + 4px);
   border: 4px solid var(--table-background);
